...
    "Ask the text. Go deeper." : {

    },
    "Authenticate" : {

    },
    "Bible" : {

    },
    "Bible (%@)" : {

    },
    "Bible Book" : {
...
    "Delete" : {

    },
    "Delete Account" : {

    },
    "Devotional" : {

    },
    "Devotional Reminder" : {

    },
    "Didache" : {
...
    "No Ads" : {

    },
    "No devotional available. Try again later." : {

    },
    "No devotional found for this day." : {

    },
    "No donations yet." : {

    },
    "No highlighted verses yet" : {
...
    "Scheduled daily at %@" : {

    },
    "Scripture on your wrist" : {

    },
    "Search" : {

    },
    "Search devotionals" : {

    },
    "Search highlights" : {
...
